added MultiSchemeHandlerTest and fixed converting URI fragment to URL query string for passthrough
git-svn-id: https://opencadc.googlecode.com/svn/trunk@1605 728ff76a-78ac-11de-a72b-d90af8dea425